@@ -1,3 +1,7 @@
+?? ??, 201? - 4.3:
+
+Add options --ignore-literals and --ignore-identifiers to the CPD command line task, thanks to Cd-Man
+
 September 14, 2011 - 4.2.6:
 Fixed bug 2920057 - False + : CloseRessource whith an external getter
 Fixed bug 1808110 - Fixed performance issue on PreserveStackTrace
